--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,46 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.teamtwo">
 
-    <!-- TextView to show the chosen option -->
-    <TextView
-        android:id="@+id/selectedOptionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose an option"
-        android:textSize="18sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 
-    <!-- Button to Choose Option 1 -->
-    <Button
-        android:id="@+id/buttonOption1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Option 1"
-        android:layout_below="@id/selectedOptionText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        <!-- Declare MainActivity as the launcher activity and specify android:exported -->
+        <activity android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
-    <!-- Button to Choose Option 2 -->
-    <Button
-        android:id="@+id/buttonOption2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Option 2"
-        android:layout_below="@id/buttonOption1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
-    <!-- Button to Choose Option 3 -->
-    <Button
-        android:id="@+id/buttonOption3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Option 3"
-        android:layout_below="@id/buttonOption2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
-</RelativeLayout>
+</manifest>
