votepage now display the qns and options

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.teamtwo">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        android:label="Clicker App"
+        android:theme="@style/CustomTheme">
 
-        <!-- Declare MainActivity as the launcher activity and specify android:exported -->
+        <!-- Main Activity -->
         <activity android:name=".MainActivity"
-            android:exported="true">
+            android:label="Clicker"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+            android:exported="true"> <!-- Added android:exported here -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
